clean up options page and organize

--- a/src/options.html
+++ b/src/options.html
@@ -126,13 +126,15 @@
             </button>
           </div>
         </div>
-        <div class="grid gap-2">
-          <p class="text-white text-base">message.customText (needs message.type to be custom)</p>
-          <div id="message-custom-text-container"
-            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
-            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
-            <input id="message-custom-text-input" type="text" autocomplete="off"
-              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input text..." />
+        <div id="message-custom-text-section">
+          <div class="grid gap-2">
+            <p class="text-white text-base">message.customText</p>
+            <div id="message-custom-text-container"
+              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+              <input id="message-custom-text-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input text..." />
+            </div>
           </div>
         </div>
       </section>
