--- a/src/options.html
+++ b/src/options.html
@@ -468,18 +468,20 @@
             </button>
           </div>
         </div>
-        <div class="grid gap-2 text-base">
-          <p class="text-white">bookmarks.userDefined</p>
-          <p class="text-white">
-            needs bookmarks.type to be user-defined, valid iconTypes can be found here:
-            <a href="https://remixicon.com/" target="_blank"
-              class="cursor-pointer text-blue-500 hover:text-blue-600 transition">
-              remixicon.com
-            </a>
-            <span class="text-indigo-500">(using version v4.2.0)</span>.
-            iconTypes should be classes beginning with `ri-`
-          </p>
-          <div id="bookmarks-options-container" class="grid grid-flow-row gap-4"></div>
+        <div id="bookmarks-user-defined-section">
+          <div class="grid gap-2 text-base">
+            <p class="text-white">bookmarks.userDefined</p>
+            <p class="text-white">
+              needs bookmarks.type to be user-defined, valid iconTypes can be found here:
+              <a href="https://remixicon.com/" target="_blank"
+                class="cursor-pointer text-blue-500 hover:text-blue-600 transition">
+                remixicon.com
+              </a>
+              <span class="text-indigo-500">(using version v4.2.0)</span>.
+              iconTypes should be classes beginning with `ri-`
+            </p>
+            <div id="bookmarks-user-defined-list" class="grid grid-flow-row gap-4"></div>
+          </div>
         </div>
       </section>
     </main>
