add ability to add bookmarks

--- a/src/options.html
+++ b/src/options.html
@@ -481,6 +481,12 @@
               iconTypes should be classes beginning with `ri-`
             </p>
             <div id="bookmarks-user-defined-list" class="grid grid-flow-row gap-4"></div>
+            <div class="pt-2">
+              <button id="bookmarks-user-defined-add-button"
+                class="bg-emerald-500 hover:bg-emerald-600 transition p-2 rounded-md cursor-pointer w-full">
+                <span class="text-white text-base">add bookmark</span>
+              </button>
+            </div>
           </div>
         </div>
       </section>
