--- a/src/options.html
+++ b/src/options.html
@@ -306,6 +306,17 @@
           <span class="text-neutral-500 text-base">search</span>
           <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
+        <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
+          <p class="text-white text-base">search.enabled</p>
+          <div class="ml-auto">
+            <label class="relative inline-flex items-center cursor-pointer">
+              <input id="search-enabled-checkbox" type="checkbox" value="" class="sr-only peer" />
+              <div
+                class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
+              </div>
+            </label>
+          </div>
+        </div>
         <div class="grid gap-2">
           <p class="text-white text-base">search.font</p>
           <div id="search-font-container"
