--- a/src/options.html
+++ b/src/options.html
@@ -538,6 +538,10 @@
       </div>
     </div>
   </div>
+  <!-- <3 -->
+  <div class="px-2 py-4">
+    <p class="text-base text-white text-center">Made with ❤️ by Max Hu et al.</p>
+  </div>
 </body>
 
 </html>
