--- a/src/options.html
+++ b/src/options.html
@@ -83,57 +83,70 @@
           <span class="text-neutral-500 text-base">message</span>
           <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
-        <div class="grid gap-2">
-          <p class="text-white text-base">message.font</p>
-          <div id="message-font-container"
-            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
-            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
-            <input id="message-font-input" type="text" autocomplete="off"
-              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input font..." />
+        <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
+          <p class="text-white text-base">message.enabled</p>
+          <div class="ml-auto">
+            <label class="relative inline-flex items-center cursor-pointer">
+              <input id="message-enabled-checkbox" type="checkbox" value="" class="sr-only peer" />
+              <div
+                class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
+              </div>
+            </label>
           </div>
         </div>
-        <div class="grid gap-2">
-          <p class="text-white text-base">message.textColor</p>
-          <div id="message-text-color-container"
-            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
-            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
-            <input id="message-text-color-input" type="text" autocomplete="off"
-              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
-          </div>
-        </div>
-        <div class="grid gap-2 text-base">
-          <p class="text-white">message.type</p>
-          <div class="grid grid-cols-2 gap-2">
-            <button id="message-type-afternoon-morning-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
-              <span class="text-white">afternoon-morning</span>
-            </button>
-            <button id="message-type-date-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
-              <span class="text-white">date</span>
-            </button>
-            <button id="message-type-time-12-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
-              <span class="text-white">time-12</span>
-            </button>
-            <button id="message-type-time-24-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
-              <span class="text-white">time-24</span>
-            </button>
-            <button id="message-type-custom-button"
-              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
-              <span class="text-white">custom</span>
-            </button>
-          </div>
-        </div>
-        <div id="message-custom-text-section">
+        <div id="message-enabled-section" class="grid grid-flow-row gap-4">
           <div class="grid gap-2">
-            <p class="text-white text-base">message.customText</p>
-            <div id="message-custom-text-container"
+            <p class="text-white text-base">message.font</p>
+            <div id="message-font-container"
               class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
               <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
-              <input id="message-custom-text-input" type="text" autocomplete="off"
-                class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input text..." />
+              <input id="message-font-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input font..." />
+            </div>
+          </div>
+          <div class="grid gap-2">
+            <p class="text-white text-base">message.textColor</p>
+            <div id="message-text-color-container"
+              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+              <input id="message-text-color-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
+            </div>
+          </div>
+          <div class="grid gap-2 text-base">
+            <p class="text-white">message.type</p>
+            <div class="grid grid-cols-2 gap-2">
+              <button id="message-type-afternoon-morning-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">afternoon-morning</span>
+              </button>
+              <button id="message-type-date-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">date</span>
+              </button>
+              <button id="message-type-time-12-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">time-12</span>
+              </button>
+              <button id="message-type-time-24-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">time-24</span>
+              </button>
+              <button id="message-type-custom-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">custom</span>
+              </button>
+            </div>
+          </div>
+          <div id="message-custom-text-section">
+            <div class="grid gap-2">
+              <p class="text-white text-base">message.customText</p>
+              <div id="message-custom-text-container"
+                class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+                <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+                <input id="message-custom-text-input" type="text" autocomplete="off"
+                  class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input text..." />
+              </div>
             </div>
           </div>
         </div>
