--- a/src/options.html
+++ b/src/options.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="options/options.css" />
   <script src="options/scripts/init.ts" type="module" defer></script>
   <link rel="icon" href="./assets/icon.svg" type="image/x-icon" />
+  <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
   <title>options ヽ(・ω・*)</title>
 </head>
 
