--- a/src/popup.html
+++ b/src/popup.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./newtab/styles/tailwind.css" />
   <link rel="stylesheet" href="popup/popup.css" />
   <script src="popup/popup.ts" defer></script>
+  <link rel="icon" href="./assets/icon.svg" type="image/x-icon" />
   <title>popup</title>
 </head>
 
