Added the option for users to add custom search engines

--- a/src/options.html
+++ b/src/options.html
@@ -443,6 +443,30 @@
                 class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
             </div>
           </div>
+
+          <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
+            <p class="text-white text-base">search.customSearchEngineURL</p>
+            <div class="ml-auto">
+              <label class="relative inline-flex items-center cursor-pointer">
+                <input id="search-custom-enabled-checkbox" type="checkbox" value="" class="sr-only peer" />
+                <div
+                  class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
+                </div>
+              </label>
+            </div>
+          </div>
+          <div id="search-custom-enabled-section" class="grid gap-2">
+            <p class="text-white text-base">Custom search engine</p>
+            <span class="text-neutral-500 text-base">Use {} to represent the search query<br>Example:
+              https://www.google.com/search?q={}</span>
+            <div id="search-custom-engine-container"
+              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+              <input id="search-custom-engine-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500"
+                placeholder="E.g https://www.google.com/search?q={}" />
+            </div>
+          </div>
         </div>
       </section>
       <!-- hotkeys -->
