--- a/src/options.html
+++ b/src/options.html
@@ -336,6 +336,7 @@
           </div>
         </div>
         <div id="search-enabled-section" class="grid grid-flow-row gap-4">
+          <span class="text-neutral-500 text-base">tip: press Ctrl+Enter to open your search in a new tab</span>
           <div class="grid gap-2">
             <p class="text-white text-base">search.font</p>
             <div id="search-font-container"
