--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,12 @@
         </div>
         <div id="bookmarks-container"></div>
       </section>
-      <section id="bookmark-search-section" class="grid grid-flow-row w-full place-items-center gap-2 hidden">
+      <section id="bookmark-search-section" class="grid-flow-row w-full place-items-center gap-2 hidden">
         <div id="bookmark-search-container"
           class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent">
           <span class="text-blue-500 font-semibold select-none">//&nbsp;</span>
           <input id="bookmark-search-input" type="text" autocomplete="off"
-            class="font-search outline-none bg-transparent placeholder-color-bookmark-search">
+            class="font-bookmark-search outline-none bg-transparent placeholder-color-bookmark-search">
         </div>
         <div id="bookmarks-search-container"></div>
       </section>
