work on search bookmarks

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,9 @@
           <input id="bookmark-search-input" type="text" autocomplete="off"
             class="font-bookmark-search outline-none bg-transparent placeholder-color-bookmark-search">
         </div>
-        <div id="bookmarks-search-results-container"></div>
+        <div id="bookmarks-search-results-container"
+          class="font-bookmark-search-results rounded-md p-2 w-full grid grid-flow-row gap-2 text-base md:text-2xl">
+        </div>
       </section>
     </div>
   </div>
