add search bookmarks key

--- a/src/options.html
+++ b/src/options.html
@@ -506,6 +506,11 @@
               <span class="text-white text-base">closePageKey</span>
               <kbd class="bg-neutral-900 rounded-md p-1 text-neutral-500 text-sm">x</kbd>
             </div>
+            <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
+            <div class="grid grid-cols-[auto_max-content]">
+              <span class="text-white text-base">searchBookmarksKey</span>
+              <kbd class="bg-neutral-900 rounded-md p-1 text-neutral-500 text-sm">b</kbd>
+            </div>
           </div>
         </div>
       </section>
