up and down arrow for search bookmarks menu

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,8 @@
             class="font-bookmark-search outline-none bg-transparent placeholder-color-bookmark-search">
         </div>
         <div id="bookmarks-search-results-container"
-          class="font-bookmark-search-results rounded-md p-2 w-full grid grid-flow-row gap-2 text-base md:text-2xl">
+          class="font-bookmark-search-results rounded-md p-2 w-full grid grid-flow-row gap-2 text-base md:text-2xl"
+          selected-index="0">
         </div>
       </section>
     </div>
