add option to change search bookmarks placeholder text and search icon colors

--- a/src/options.html
+++ b/src/options.html
@@ -374,11 +374,48 @@
             </div>
           </div>
           <div class="grid gap-2">
+            <p class="text-white text-base">search.bookmarkPlaceholderText</p>
+            <div id="search-bookmark-placeholder-text-container"
+              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+              <input id="search-bookmark-placeholder-text-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500"
+                placeholder="input placeholder..." />
+            </div>
+          </div>
+          <div class="grid gap-2">
             <p class="text-white text-base">search.placeholderTextColor</p>
             <div id="search-placeholder-text-color-container"
               class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
               <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
               <input id="search-placeholder-text-color-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
+            </div>
+          </div>
+          <div class="grid gap-2">
+            <p class="text-white text-base">search.searchIconColor</p>
+            <div id="search-search-icon-color-container"
+              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+              <input id="search-search-icon-color-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
+            </div>
+          </div>
+          <div class="grid gap-2">
+            <p class="text-white text-base">search.bookmarkIconColor</p>
+            <div id="search-bookmark-icon-color-container"
+              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+              <input id="search-bookmark-icon-color-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
+            </div>
+          </div>
+          <div class="grid gap-2">
+            <p class="text-white text-base">search.selectIconColor</p>
+            <div id="search-select-icon-color-container"
+              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+              <input id="search-select-icon-color-input" type="text" autocomplete="off"
                 class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
             </div>
           </div>
