add ability to change search bookmark placeholder text and search icon colors

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <section id="search-section" class="grid grid-flow-row w-full place-items-center gap-2">
         <div id="search-container"
           class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent">
-          <span class="text-teal-500 font-semibold select-none">->&nbsp;</span>
+          <span class="search-search-icon-color font-semibold select-none">->&nbsp;</span>
           <input id="search-input" type="text" autocomplete="off"
             class="font-search outline-none bg-transparent placeholder-color-search">
         </div>
@@ -30,7 +30,7 @@
       <section id="bookmark-search-section" class="grid-flow-row w-full place-items-center gap-2 hidden">
         <div id="bookmark-search-container"
           class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent">
-          <span class="text-blue-500 font-semibold select-none">//&nbsp;</span>
+          <span class="search-bookmark-icon-color font-semibold select-none">//&nbsp;</span>
           <input id="bookmark-search-input" type="text" autocomplete="off"
             class="font-bookmark-search outline-none bg-transparent placeholder-color-bookmark-search">
         </div>
