--- a/src/options.html
+++ b/src/options.html
@@ -534,20 +534,16 @@
         </div>
         <div id="hotkeys-enabled-section">
           <div class="grid grid-flow-row gap-2 bg-neutral-800 rounded-md p-2">
-            <div class="grid grid-cols-[auto_max-content]">
-              <span class="text-white text-base">activationKey</span>
-              <kbd class="bg-neutral-900 rounded-md p-1 text-neutral-500 text-sm">SPC</kbd>
+            <div class="grid grid-cols-[max-content_auto_max-content]">
+              <p class="text-white text-base my-auto">hotkeys.activationKey</p>
+              <span id="hotkeys-activation-key-status" class="text-neutral-500 text-base my-auto">&nbsp;(none)</span>
+              <div id="hotkeys-activation-key-container"
+                class="grid grid-cols-[max-content_auto] text-base bg-neutral-900 w-full p-1 rounded-md border-2 border-transparent">
+                <input id="hotkeys-activation-key-input" type="text" autocomplete="off"
+                  class="outline-none bg-transparent text-white placeholder-neutral-500 w-[1ch]" />
+              </div>
             </div>
             <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
-            <div class="grid grid-cols-[auto_max-content]">
-              <span class="text-white text-base">closePageKey</span>
-              <kbd class="bg-neutral-900 rounded-md p-1 text-neutral-500 text-sm">x</kbd>
-            </div>
-            <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
-            <div class="grid grid-cols-[auto_max-content]">
-              <span class="text-white text-base">searchBookmarksKey</span>
-              <kbd class="bg-neutral-900 rounded-md p-1 text-neutral-500 text-sm">b</kbd>
-            </div>
           </div>
         </div>
       </section>
