--- a/src/options.html
+++ b/src/options.html
@@ -535,8 +535,8 @@
         <div id="hotkeys-enabled-section">
           <div class="grid grid-flow-row gap-2 bg-neutral-800 rounded-md p-2">
             <div class="grid grid-cols-[max-content_auto_max-content]">
-              <p class="text-white text-base my-auto">hotkeys.activationKey</p>
-              <span id="hotkeys-activation-key-status" class="text-neutral-500 text-base my-auto">&nbsp;(none)</span>
+              <p class="text-white text-base my-auto">hotkeys.activationKey&nbsp;</p>
+              <span id="hotkeys-activation-key-status" class="text-neutral-500 text-base my-auto">(none)</span>
               <div id="hotkeys-activation-key-container"
                 class="grid grid-cols-[max-content_auto] text-base bg-neutral-900 w-full p-1 rounded-md border-2 border-transparent">
                 <input id="hotkeys-activation-key-input" type="text" autocomplete="off"
@@ -544,6 +544,25 @@
               </div>
             </div>
             <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
+            <div class="grid grid-cols-[max-content_auto_max-content]">
+              <p class="text-white text-base my-auto">hotkeys.closePageKey&nbsp;</p>
+              <span id="hotkeys-close-page-key-status" class="text-neutral-500 text-base my-auto">(none)</span>
+              <div id="hotkeys-close-page-key-container"
+                class="grid grid-cols-[max-content_auto] text-base bg-neutral-900 w-full p-1 rounded-md border-2 border-transparent">
+                <input id="hotkeys-close-page-key-input" type="text" autocomplete="off"
+                  class="outline-none bg-transparent text-white placeholder-neutral-500 w-[1ch]" />
+              </div>
+            </div>
+            <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
+            <div class="grid grid-cols-[max-content_auto_max-content]">
+              <p class="text-white text-base my-auto">hotkeys.searchBookmarksKey&nbsp;</p>
+              <span id="hotkeys-search-bookmarks-key-status" class="text-neutral-500 text-base my-auto">(none)</span>
+              <div id="hotkeys-search-bookmarks-key-container"
+                class="grid grid-cols-[max-content_auto] text-base bg-neutral-900 w-full p-1 rounded-md border-2 border-transparent">
+                <input id="hotkeys-search-bookmarks-key-input" type="text" autocomplete="off"
+                  class="outline-none bg-transparent text-white placeholder-neutral-500 w-[1ch]" />
+              </div>
+            </div>
           </div>
         </div>
       </section>
