add animations stuff

--- a/src/options.html
+++ b/src/options.html
@@ -321,6 +321,10 @@
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">up-smooth</span>
               </button>
+              <button id="animations-type-grow-scale-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">grow-scale</span>
+              </button>
             </div>
           </div>
         </div>
