add fly-right and fly-left animation and more

--- a/src/options.html
+++ b/src/options.html
@@ -328,6 +328,14 @@
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">grow-scale</span>
               </button>
+              <button id="animations-type-fly-left-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">fly-left</span>
+              </button>
+              <button id="animations-type-fly-right-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">fly-right</span>
+              </button>
             </div>
           </div>
         </div>
