--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <script src="newtab/scripts/init.ts" type="module" defer></script>
 </head>
 
-<body dir="ltr" class="bg-neutral-500 min-h-screen grid place-items-center">
+<body dir="ltr" class="bg-neutral-500 min-h-screen grid place-items-center overflow-x-hidden">
   <div id="wallpaper" class="w-screen h-screen fixed z-[-1]"></div>
   <div id="content" class="grid place-items-center gap-2 m-padding-bottom w-[95%] md:w-[80%] max-w-[50rem]">
     <div class="grid grid-flow-row w-full place-items-center gap-2 md:gap-4">
