--- a/src/options.html
+++ b/src/options.html
@@ -618,6 +618,10 @@
               <span class="text-indigo-500">(using version v4.3.0)</span>. iconTypes should be
               classes beginning with `ri-`
             </p>
+            <button id="bookmarks-user-defined-collapse-all-button"
+              class="bg-neutral-500 hover:bg-neutral-600 transition p-2 rounded-md cursor-pointer w-full">
+              <span class="text-white text-base">collapse/expand all</span>
+            </button>
             <div id="bookmarks-user-defined-list" class="grid grid-flow-row gap-4"></div>
             <div class="pt-2">
               <button id="bookmarks-user-defined-add-button"
