--- a/src/options.html
+++ b/src/options.html
@@ -621,7 +621,7 @@
             <button id="bookmarks-user-defined-toggle-collapse-all-button"
               class="bg-neutral-500 hover:bg-neutral-600 transition p-2 rounded-md cursor-pointer w-full"
               last-action="expand">
-              <span class="text-white text-base">collapse/expand all</span>
+              <span class="text-white text-base">collapse all</span>
             </button>
             <div id="bookmarks-user-defined-list" class="grid grid-flow-row gap-4"></div>
             <div class="pt-2">
