--- a/src/options.html
+++ b/src/options.html
@@ -17,7 +17,7 @@
 <body dir="ltr" class="bg-neutral-900 min-h-screen">
   <div class="grid grid-flow-row w-[95%] sm:w-[80%] md:w-[60%] lg:w-[40%] mx-auto">
     <div class="grid place-items-center gap-4 p-4">
-      <img src="./assets/icon.png" class="w-40 aspect-square animate-float" alt="logo" />
+      <img id="mtab-logo" src="./assets/icon.png" class="w-40 aspect-square animate-up-bouncy" alt="logo" />
       <h1 class="text-white w-max text-2xl md:text-4xl font-semibold">
         <span class="text-emerald-500">mtab</span><span class="text-neutral-500">/</span><span>options</span>
       </h1>
