make search bar more smooth on initial load

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <p id="message" class="font-message text-white text-center text-2xl md:text-4xl lg:text-6xl font-semibold"></p>
       <section id="search-section" class="grid grid-flow-row w-full place-items-center gap-2">
         <div id="search-container"
-          class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent">
+          class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent opacity-0">
           <span class="search-search-icon-color font-semibold select-none">->&nbsp;</span>
           <input id="search-input" type="text" autocomplete="off"
             class="font-search outline-none bg-transparent placeholder-color-search">
