add option to add custom favicon

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="newtab/styles/index.css" />
   <link rel="stylesheet" href="newtab/styles/animations.css" />
   <link rel="stylesheet" href="assets/icons/remixicon.css" />
-  <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link id="favicon" rel="icon" href="./assets/favicon.ico" type="image/x-icon">
   <script src="newtab/scripts/init.ts" type="module" defer></script>
 </head>
 
