--- a/src/options.html
+++ b/src/options.html
@@ -80,6 +80,15 @@
             </label>
           </div>
         </div>
+        <div class="grid gap-2">
+          <div id="title-custom-favicon-upload-section">
+            <p class="text-white text-base">title.customFavicon</p>
+            <div>
+              <input type="file" id="title-custom-favicon-upload" accept="image/*"
+                class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
+            </div>
+          </div>
+        </div>
       </section>
       <!-- message -->
       <section class="grid grid-flow-row gap-4">
