options stuff for custom favicon type

--- a/src/options.html
+++ b/src/options.html
@@ -80,12 +80,27 @@
             </label>
           </div>
         </div>
-        <div class="grid gap-2">
-          <div id="title-custom-favicon-upload-section">
-            <p class="text-white text-base">title.customFavicon</p>
-            <div>
-              <input type="file" id="title-custom-favicon-upload" accept="image/*"
-                class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
+        <div class="grid gap-2 text-base">
+          <p class="text-white">title.faviconType</p>
+          <div class="grid grid-cols-2 gap-2">
+            <button id="title-favicon-type-default-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+              <span class="text-white">default</span>
+            </button>
+            <button id="title-favicon-type-custom-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+              <span class="text-white">custom</span>
+            </button>
+          </div>
+        </div>
+        <div class="grid">
+          <div class="grid gap-2">
+            <div id="title-custom-favicon-upload-section">
+              <p class="text-white text-base">title.customFavicon</p>
+              <div>
+                <input type="file" id="title-custom-favicon-upload" accept="image/*"
+                  class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
+              </div>
             </div>
           </div>
         </div>
