--- a/src/options.html
+++ b/src/options.html
@@ -94,12 +94,15 @@
           </div>
         </div>
         <div class="grid">
-          <div class="grid gap-2">
-            <div id="title-custom-favicon-upload-section">
+          <div id="title-custom-favicon-upload-section">
+            <div class="grid gap-2">
               <p class="text-white text-base">title.customFavicon</p>
               <div>
                 <input type="file" id="title-custom-favicon-upload" accept="image/*"
                   class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
+              </div>
+              <p class="text-neutral-500 text-base">live preview</p>
+              <div id="live-favicon-preview" class="w-16 aspect-square bg-neutral-800 rounded-md overflow-hidden">
               </div>
             </div>
           </div>
@@ -224,12 +227,15 @@
                 </div>
               </div>
             </div>
-            <div class="grid gap-2">
-              <div id="wallpaper-file-upload-section">
+            <div id="wallpaper-file-upload-section">
+              <div class="grid gap-2">
                 <p class="text-white text-base">wallpaper.fileUpload</p>
                 <div>
                   <input type="file" id="wallpaper-file-upload" accept="image/*"
                     class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
+                </div>
+                <p class="text-neutral-500 text-base">live preview</p>
+                <div id="live-wallpaper-preview" class="w-64 aspect-video bg-neutral-800 rounded-md overflow-hidden">
                 </div>
               </div>
             </div>
