show icon if no wallpaper or favicon uploaded

--- a/src/options.html
+++ b/src/options.html
@@ -102,7 +102,8 @@
                   class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
               </div>
               <p class="text-neutral-500 text-base">live preview</p>
-              <div id="live-favicon-preview" class="w-16 aspect-square bg-neutral-800 rounded-md overflow-hidden">
+              <div id="live-favicon-preview"
+                class="w-16 aspect-square bg-neutral-800 rounded-md overflow-hidden grid place-items-center">
               </div>
             </div>
           </div>
@@ -235,7 +236,8 @@
                     class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
                 </div>
                 <p class="text-neutral-500 text-base">live preview</p>
-                <div id="live-wallpaper-preview" class="w-64 aspect-video bg-neutral-800 rounded-md overflow-hidden">
+                <div id="live-wallpaper-preview"
+                  class="w-64 aspect-video bg-neutral-800 rounded-md overflow-hidden grid place-items-center">
                 </div>
               </div>
             </div>
