--- a/src/config-utils.html
+++ b/src/config-utils.html
@@ -25,26 +25,31 @@
     <main class="grid grid-flow-row gap-20 py-16">
       <div class="grid gap-2 text-base">
         <div class="grid grid-cols-2 gap-2">
-          <button id="mode-mtj-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+          <button id="convert-mtj-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
             <span class="text-white">MTAB_SAVE_FORMAT -> json</span>
           </button>
-          <button id="mode-jtm-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+          <button id="convert-jtm-button" class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
             <span class="text-white">json -> MTAB_SAVE_FORMAT</span>
           </button>
         </div>
-        <div id="mode-section" class="grid gap-2">
+        <div id="convert-section" class="grid gap-2">
           <p class="text-white text-base">input</p>
-          <div id="mode-in-container"
+          <div id="convert-in-container"
             class="text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
-            <textarea id="mode-in-textarea" type="text" autocomplete="off" rows="16"
+            <textarea id="convert-in-textarea" type="text" autocomplete="off" rows="16"
               class="w-full outline-none bg-transparent text-white placeholder-neutral-500 resize-none"></textarea>
           </div>
           <p class="text-white text-base">output</p>
-          <div id="mode-out-container"
+          <div id="convert-out-container"
             class="text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
-            <textarea id="mode-out-textarea" type="text" autocomplete="off" rows="16"
-              class="w-full outline-none bg-transparent text-white placeholder-neutral-500 resize-none"></textarea>
+            <textarea id="convert-out-textarea" type="text" autocomplete="off" rows="16"
+              class="w-full outline-none bg-transparent text-white placeholder-neutral-500 resize-none"
+              readonly></textarea>
           </div>
+          <button id="convert-save-button"
+            class="bg-indigo-500 hover:bg-indigo-600 transition p-2 rounded-md cursor-pointer">
+            <span class="text-white text-base">convert save</span>
+          </button>
         </div>
       </div>
     </main>
