--- a/src/options.html
+++ b/src/options.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./newtab/styles/tailwind.css" />
-  <link rel="stylesheet" href="options/options.css" />
+  <link rel="stylesheet" href="newtab/styles/tailwind.css" />
+  <link rel="stylesheet" href="shared/control.css" />
   <link rel="stylesheet" href="assets/icons/remixicon.css" />
   <script src="options/scripts/init.ts" type="module" defer></script>
-  <link rel="icon" href="./assets/icon.svg" type="image/x-icon" />
-  <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="assets/icon.svg" type="image/x-icon" />
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
   <title>options ヽ(・ω・*)</title>
 </head>
 
