--- a/src/popup.html
+++ b/src/popup.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./newtab/styles/tailwind.css" />
+  <link rel="stylesheet" href="newtab/styles/tailwind.css" />
   <link rel="stylesheet" href="popup/popup.css" />
   <script src="popup/popup.ts" defer></script>
-  <link rel="icon" href="./assets/icon.svg" type="image/x-icon" />
+  <link rel="icon" href="assets/icon.svg" type="image/x-icon" />
   <title>popup</title>
 </head>
 
