add config-utils button to options page

--- a/src/options.html
+++ b/src/options.html
@@ -669,9 +669,13 @@
     <!-- save buttons and more -->
     <div class="py-4 grid grid-flow-row gap-4 place-items-center mt-20 mb-12">
       <div class="w-full grid grid-flow-row gap-4 place-items-center">
-        <div class="w-full grid grid-flow-row lg:grid-cols-3 gap-2">
+        <div class="w-full grid grid-flow-row lg:grid-cols-2 gap-2">
           <button id="save-button" class="bg-emerald-500 hover:bg-emerald-600 transition p-2 rounded-md cursor-pointer">
             <span class="text-white text-base">save (ctrl+s)</span>
+          </button>
+          <button id="config-utils-button"
+            class="bg-emerald-500 hover:bg-emerald-600 transition p-2 rounded-md cursor-pointer">
+            <span class="text-white text-base">config-utils</span>
           </button>
           <button id="export-button" class="bg-indigo-500 hover:bg-indigo-600 transition p-2 rounded-md cursor-pointer">
             <span class="text-white text-base">save & export</span>
