--- a/src/options.html
+++ b/src/options.html
@@ -97,9 +97,13 @@
           <div id="title-custom-favicon-upload-section">
             <div class="grid gap-2">
               <p class="text-white text-base">title.customFavicon</p>
-              <div>
+              <div class="grid grid-cols-2 gap-2">
                 <input type="file" id="title-custom-favicon-upload" accept="image/*"
-                  class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
+                  class="bg-cyan-500 hover:bg-cyan-600 transition p-2 rounded-md text-white text-base cursor-pointer w-full" />
+                <button id="title-custom-favicon-reset-button"
+                  class="w-full bg-rose-500 hover:bg-rose-600 transition p-2 rounded-md cursor-pointer">
+                  <span class="text-white text-base">reset</span>
+                </button>
               </div>
               <p class="text-neutral-500 text-base">live preview</p>
               <div id="live-favicon-preview"
@@ -231,9 +235,13 @@
             <div id="wallpaper-file-upload-section">
               <div class="grid gap-2">
                 <p class="text-white text-base">wallpaper.fileUpload</p>
-                <div>
-                  <input type="file" id="wallpaper-file-upload" accept="image/*"
-                    class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
+                <div class="grid grid-cols-2 gap-2">
+                  <input type="file" id="wallpaper-file-upload-input" accept="image/*"
+                    class="bg-cyan-500 hover:bg-cyan-600 transition p-2 rounded-md text-white text-base cursor-pointer w-full" />
+                  <button id="wallpaper-file-upload-reset-button"
+                    class="w-full bg-rose-500 hover:bg-rose-600 transition p-2 rounded-md cursor-pointer">
+                    <span class="text-white text-base">reset</span>
+                  </button>
                 </div>
                 <p class="text-neutral-500 text-base">live preview</p>
                 <div id="live-wallpaper-preview"
