change animations.type to animations.initialType

--- a/src/options.html
+++ b/src/options.html
@@ -343,37 +343,37 @@
             </div>
           </div>
           <div class="grid gap-2 text-base">
-            <p class="text-white">animations.type</p>
+            <p class="text-white">animations.initialType</p>
             <div class="grid grid-cols-2 gap-2">
-              <button id="animations-type-down-bouncy-button"
+              <button id="animations-initial-type-down-bouncy-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">down-bouncy</span>
               </button>
-              <button id="animations-type-down-smooth-button"
+              <button id="animations-initial-type-down-smooth-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">down-smooth</span>
               </button>
-              <button id="animations-type-down-fall-button"
+              <button id="animations-initial-type-down-fall-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">down-fall</span>
               </button>
-              <button id="animations-type-up-bouncy-button"
+              <button id="animations-initial-type-up-bouncy-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">up-bouncy</span>
               </button>
-              <button id="animations-type-up-smooth-button"
+              <button id="animations-initial-type-up-smooth-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">up-smooth</span>
               </button>
-              <button id="animations-type-grow-scale-button"
+              <button id="animations-initial-type-grow-scale-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">grow-scale</span>
               </button>
-              <button id="animations-type-fly-left-button"
+              <button id="animations-initial-type-fly-left-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">fly-left</span>
               </button>
-              <button id="animations-type-fly-right-button"
+              <button id="animations-initial-type-fly-right-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
                 <span class="text-white">fly-right</span>
               </button>
