add option to change search and bookmark animation type

--- a/src/options.html
+++ b/src/options.html
@@ -379,6 +379,48 @@
               </button>
             </div>
           </div>
+          <div class="grid gap-2 text-base">
+            <p class="text-white">animations.searchType</p>
+            <div class="grid grid-cols-2 gap-2">
+              <button id="animations-search-type-page-shrink-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">page-shrink</span>
+              </button>
+              <button id="animations-search-type-page-scale-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">page-scale</span>
+              </button>
+              <button id="animations-search-type-page-up-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">page-up</span>
+              </button>
+              <button id="animations-search-type-page-down-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">page-down</span>
+              </button>
+            </div>
+          </div>
+          <div class="grid gap-2 text-base">
+            <p class="text-white">animations.bookmarkType</p>
+            <div class="grid grid-cols-2 gap-2">
+              <button id="animations-bookmark-type-page-shrink-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">page-shrink</span>
+              </button>
+              <button id="animations-bookmark-type-page-scale-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">page-scale</span>
+              </button>
+              <button id="animations-bookmark-type-page-up-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">page-up</span>
+              </button>
+              <button id="animations-bookmark-type-page-down-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">page-down</span>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
       <!-- search -->
