--- a/src/config-utils.html
+++ b/src/config-utils.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="newtab/styles/tailwind.css" />
-  <link rel="stylesheet" href="config-utils/config-utils.css" />
+  <link rel="stylesheet" href="shared/control.css" />
   <script src="config-utils/scripts/init.ts" type="module" defer></script>
   <link rel="icon" href="assets/icon.svg" type="image/x-icon" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
