--- a/src/options.html
+++ b/src/options.html
@@ -692,13 +692,19 @@
           <div class="grid gap-2 text-base">
             <p class="text-white">bookmarks.userDefined</p>
             <p class="text-neutral-500">
-              needs bookmarks.type to be user-defined, valid iconTypes can be found here:
-              <a href="https://remixicon.com/" target="_blank"
+              valid iconTypes can be found here:
+              <a href="https://remixicon.com" target="_blank"
                 class="cursor-pointer text-blue-500 hover:text-blue-600 transition">
                 remixicon.com
               </a>
-              <span class="text-indigo-500">(using version v4.3.0)</span>. iconTypes should be
-              classes beginning with `ri-`
+              <span class="text-indigo-500">(using version v4.3.0)</span>. remix icon iconTypes should be
+              classes begin with `ri-`
+            </p>
+            <p class="text-neutral-500">
+              you can also use nerd font icons as iconTypes:
+              <a href="https://www.nerdfonts.com/cheat-sheet" target="_blank"
+                class="cursor-pointer text-blue-500 hover:text-blue-600 transition">
+                nerdfonts.com</a>. nerd font iconTypes should be classes begin with `nf-`
             </p>
             <button id="bookmarks-user-defined-toggle-collapse-all-button"
               class="bg-neutral-500 hover:bg-neutral-600 transition p-2 rounded-md cursor-pointer w-full"
