--- a/src/options.html
+++ b/src/options.html
@@ -697,14 +697,19 @@
                 class="cursor-pointer text-blue-500 hover:text-blue-600 transition">
                 remixicon.com
               </a>
-              <span class="text-indigo-500">(using version v4.3.0)</span>. remix icon iconTypes should be
+              <span class="text-indigo-500">(using version v4.3.0)</span>.<br /> remix icon iconTypes should be
               classes begin with `ri-`
             </p>
             <p class="text-neutral-500">
               you can also use nerd font icons as iconTypes:
               <a href="https://www.nerdfonts.com/cheat-sheet" target="_blank"
                 class="cursor-pointer text-blue-500 hover:text-blue-600 transition">
-                nerdfonts.com</a>. nerd font iconTypes should be classes begin with `nf-`
+                nerdfonts.com</a>.<br /> nerd font iconTypes should be classes begin with `nf-`
+            </p>
+            <p class="text-neutral-500">
+              you can also use a urls as iconTypes:
+              <br />
+              url iconTypes should be structured like `url-https://...`
             </p>
             <button id="bookmarks-user-defined-toggle-collapse-all-button"
               class="bg-neutral-500 hover:bg-neutral-600 transition p-2 rounded-md cursor-pointer w-full"
