add abilility to change number of bookmarks in row (#28)

--- a/src/options.html
+++ b/src/options.html
@@ -690,6 +690,16 @@
         </div>
         <div id="bookmarks-user-defined-section">
           <div class="grid gap-2 text-base">
+            <div class="grid gap-2">
+              <p class="text-white text-base">bookmarks.userDefinedCols</p>
+              <div id="bookmarks-user-defined-cols-container"
+                class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+                <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+                <input id="bookmarks-user-defined-cols-input" type="text" autocomplete="off"
+                  class="outline-none bg-transparent text-white placeholder-neutral-500"
+                  placeholder="input number..." />
+              </div>
+            </div>
             <p class="text-white">bookmarks.userDefined</p>
             <p class="text-neutral-500">
               valid iconTypes can be found here:
