--- a/src/options.html
+++ b/src/options.html
@@ -726,8 +726,8 @@
               last-action="expand">
               <span class="text-white text-base">collapse all</span>
             </button>
-            <div id="bookmarks-user-defined-list" class="grid grid-flow-row gap-4"></div>
-            <div class="pt-2">
+            <div id="bookmarks-user-defined-list" class="grid grid-flow-row gap-2"></div>
+            <div class="">
               <button id="bookmarks-user-defined-add-button"
                 class="bg-emerald-500 hover:bg-emerald-600 transition p-2 rounded-md cursor-pointer w-full">
                 <span class="text-white text-base">add bookmark</span>
